Fixed Image blurring on resize issue. Game now has Crisp images for any size.

--- a/CSS.css
+++ b/CSS.css
@@ -7,4 +7,10 @@ body {
 canvas {
 
 	border: 1px solid #c3c3c3;
+    image-rendering: optimizeSpeed;             /* Older versions of FF */
+    image-rendering: -moz-crisp-edges;          /* FF 6.0+ */
+    image-rendering: -webkit-optimize-contrast; /* Webkit (non standard naming) */
+    image-rendering: -o-crisp-edges;            /* OS X & Windows Opera (12.02+) */
+    image-rendering: crisp-edges;               /* Possible future browsers. */
+    -ms-interpolation-mode: nearest-neighbor;   /* IE (non standard naming) */
 }
